--- a/views/student/auth/register.ejs
+++ b/views/student/auth/register.ejs
@@ -21,7 +21,7 @@
         <br><br>
         <input type="tel" name="PhoneNo" placeholder="Phone No" id="">
         <br><br>
-        
+        <input type="image" src="" alt="">
     </form>
 </body>
 </html>
