--- a/views/student/auth/register.ejs
+++ b/views/student/auth/register.ejs
@@ -17,11 +17,12 @@
         <br><br>
         <input type="text" name="LName" placeholder="Last Name" id="">
         <br><br>
-        <input type="text" name="FName" placeholder="First Name" id="">
-        <br><br>
         <input type="tel" name="PhoneNo" placeholder="Phone No" id="">
         <br><br>
-        <input type="image" src="" alt="">
+        <input type="file" name="image" accept="image/*" id="">
+        <br><br>
+        <button type="submit">Register</button>
+        <a href="/login">Login</a>
     </form>
 </body>
 </html>
