--- a/views/student/auth/login.ejs
+++ b/views/student/auth/login.ejs
@@ -7,6 +7,8 @@
     <title>Register</title>
 </head>
 <body>
+    <p><%= msg %> </p>
+
     <form action="/login" method="post">
         <input type="email" name="Email" placeholder="Email" id="">
         <br><br>
