--- a/views/student/auth/register.ejs
+++ b/views/student/auth/register.ejs
@@ -7,7 +7,8 @@
     <title>Register</title>
 </head>
 <body>
-    <form action="/register" method="post">
+    <p><%= msg %> </p>
+    <form action="/register" method="post" enctype="multipart/form-data">
         <input type="email" name="Email" placeholder="Email" id="">
         <br><br>
         <input type="password" name="Pass" placeholder="Password" id="">
