--- a/views/success.ejs
+++ b/views/success.ejs
@@ -8,6 +8,6 @@
 </head>
 <body>
 <center><h1>Sucessfully <%= tlk %> </h1></center>
-<center><a href="<%= goTo %> ">Click here</a></center>
+<center><a href="<%= goTo %> " target="_blank">Click here</a></center>
 </body>
 </html>
