--- a/views/student/auth/login.ejs
+++ b/views/student/auth/login.ejs
@@ -17,6 +17,8 @@
         
         <button type="submit">Login</button>
         <a href="/register">register</a>
+        <a href="/v/reset">Reset</a>
+
     </form>
 </body>
 </html>
