--- a/views/school/createCourse.ejs
+++ b/views/school/createCourse.ejs
@@ -4,13 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Admin Dashboard</title>
+    <title>Document</title>
 </head>
 <body>
-    <h1>Dashboard</h1>
-
-    <form action="/createCourse" method="post">
-        <input type="submit" value="Create Course">
-    </form>
+    <h1>Add New Courses</h1>
 </body>
 </html>
