--- a/views/school/dashboard.ejs
+++ b/views/school/dashboard.ejs
@@ -9,7 +9,7 @@
 <body>
     <h1>Dashboard</h1>
 
-    <form action="/createCourse" method="post">
+    <form action="/createCourse">
         <input type="submit" value="Create Course">
     </form>
 </body>
