--- a/views/school/createCourse.ejs
+++ b/views/school/createCourse.ejs
@@ -8,8 +8,17 @@
 </head>
 <body>
     <h1>Add New Courses</h1>
-    <form action="" method="POST">
-        
+    <form action="/createCourse" method="POST">
+        <label for="courseName">Course Name:</label>
+        <input type="text" name="courseName" id="courseName" placeholder="Enter Course Name" required>
+        <br>
+        <label for="courseCode">Course Code:</label>
+        <input type="text" name="courseCode" id="courseCode" placeholder="Enter Course Code" required>
+        <br>
+        <label for="price">Course Price:</label>
+        <input type="number" name="price" id="price" placeholder="Enter Price" required>
+        <br>
+        <input type="submit" value="Add Course">
     </form>
 </body>
 </html>
