--- a/views/school/dashboard.ejs
+++ b/views/school/dashboard.ejs
@@ -12,5 +12,31 @@
     <form action="/createCourse">
         <input type="submit" value="Create Course">
     </form>
+
+    <div class="courses">
+        <% if (courses.length > 0) { %>
+            <table>
+                <tr>
+                    <th>Course Code</th>
+                    <th>Course Name</th>
+                    <th>Course Price</th>
+                    <th>Actions</th>
+                </tr>
+                <% courses.forEach(course => { %>
+                    <tr>
+                        <td><%= course.CourseCode %></td>
+                        <td><%= course.Name %></td>
+                        <td><%= course.Price %></td>
+                        <td>
+                                <a href="#">Edit</a>
+                                <a href="#">Delete</a>
+                        </td>
+                    </tr>
+                <% }) %>
+            </table>
+        <% } else { %>
+            <p>There are no Courses</p>
+        <% } %>
+    </div>
 </body>
 </html>
