--- a/views/student/home.ejs
+++ b/views/student/home.ejs
@@ -12,8 +12,8 @@
         <div>
             <h4><%= user.Fname %> <%= user.Lname %> </h4>
             <img src="<%= user.imgUrl %>" alt="<%= user.Fname %>" width="200px" height="200px" style="border-radius: 100px">
-            <a href="/edit">edit Profile</a>
-            <a href="/addcourse">addcourse</a>
+            <a href="/student/edit">edit Profile</a>
+            <a href="/regcourse">addcourse</a>
             <a href="/logout">Logout</a>
         </div>
     </header>
