--- a/views/student/editDet.ejs
+++ b/views/student/editDet.ejs
@@ -14,7 +14,7 @@
         <br><br>
         <input type="text" name="LName" placeholder="Last Name" value="<%= user.Lname %>" id="">
         <br><br>
-        <button type="submit">Register</button>
+        <button type="submit">edit</button>
         <a href="/">Home</a>
     </form>
 </body>
