--- a/views/school/dashboard.ejs
+++ b/views/school/dashboard.ejs
@@ -28,7 +28,7 @@
                         <td><%= course.Name %></td>
                         <td><%= course.Price %></td>
                         <td>
-                                <a href="/edit/<%= id %>">Edit</a>
+                                <a href="/editCourse/<%= course._id %>">Edit</a>
                                 <a href="#">Delete</a>
                         </td>
                     </tr>
