--- a/views/school/editCourse.ejs
+++ b/views/school/editCourse.ejs
@@ -9,7 +9,7 @@
 <body>
     <h1>Edit This Course</h1>
 
-    <form action="/edit" method="POST">
+    <form action="/editCourse" method="POST">
         <label for="courseName">Update Course Name:</label>
         <input type="text" name="courseName" id="courseName">
         <br>
