--- a/views/school/login.ejs
+++ b/views/school/login.ejs
@@ -11,7 +11,7 @@
     <p style="color: red;"><%= passwordMsg %></p>
     <p style="color: red;"><%= msg %></p>
     <form action="/adminLogin" method="POST">
-        <label for="email">Password</label>
+        <label for="email">Email</label>
         <input type="email" name="email" id="email" placeholder="Enter your Email">
         <br>
         <label for="password">Password</label>
