--- a/views/school/courses/editCourse.ejs
+++ b/views/school/courses/editCourse.ejs
@@ -9,15 +9,15 @@
 <body>
     <h1>Edit This Course</h1>
 
-    <form action="/editCourse" method="POST">
+    <form action="/editCourse/<%= course._id %>" method="POST">
         <label for="courseName">Update Course Name:</label>
-        <input type="text" name="courseName" id="courseName">
+        <input type="text" name="courseName" value="<%= course.Name %>" id="courseName">
         <br>
         <label for="courseCode">Update Course Code:</label>
-        <input type="text" name="courseCode" id="courseCode">
+        <input type="text" name="courseCode" value="<%= course.CourseCode %>" id="courseCode">
         <br>
         <label for="price">Update Course Price</label>
-        <input type="number" name="price" id="price">
+        <input type="number" name="price" value="<%= course.Price %>" id="price">
         <br>
         <input type="submit" value="Update Course">
     </form>
