--- a/views/student/editDet.ejs
+++ b/views/student/editDet.ejs
@@ -8,7 +8,7 @@
 </head>
 <body>
     <p><%= msg %> </p>
-    <form action="/edit" method="post" enctype="multipart/form-data">
+    <form action="/student/edit" method="post" enctype="multipart/form-data">
         
         <input type="text" name="FName" value="<%= user.Fname %>" placeholder="First Name" id="">
         <br><br>
