--- a/views/student/home.ejs
+++ b/views/student/home.ejs
@@ -1,38 +1,80 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
+<title>Home</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
+<style>
+body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
+</style>
 </head>
-<body>
-    <header>
-        <h2>Lincoln</h2>
-        <div>
-            <h4><%= user.Fname %> <%= user.Lname %> </h4>
-            <img src="<%= user.imgUrl %>" alt="<%= user.Fname %>" width="200px" height="200px" style="border-radius: 100px">
-            <a href="/student/edit">edit Profile</a>
-            <a href="/regcourse">addcourse</a>
-            <a href="/logout">Logout</a>
+<body class="w3-light-grey">
+
+<!-- w3-content defines a container for fixed size centered content, 
+and is wrapped around the whole page content, except for the footer in this example -->
+<div class="w3-content" style="max-width:1400px">
+
+<!-- Header -->
+<header class="w3-container w3-center w3-padding-32">
+    <img src="<%= user.imgUrl %>" alt="<%= user.Fname %>" width="150px" height="150px" style="border-radius: 100px">
+
+  <h1><b>Lincoln Online</b></h1>
+  <h3><b><%= user.Fname %> <%= user.Lname %></b></h3>
+
+  <p><a href="/student/edit">edit Profile</a> ||
+    <a href="/regcourse">addcourse</a> ||
+    <a href="/logout">Logout</a></p>
+</header>
+
+<!-- Grid -->
+<div class="w3-row">
+    <% if (myCourse.length>0) { %>
+        <% myCourse.forEach(crs => { %>
+            <% var details= allcrs.find(i=>i._id==crs.crsID) %> 
+
+<!-- Blog entries -->
+<div class="w3-col s12">
+  <!-- Blog entry -->
+  <div class="w3-card-4 w3-margin w3-white">
+    <img src="/crsimg.jpg" alt="Nature" style="width:100%;object-fit:cover; height: 100px;">
+    <div class="w3-container">
+      <h3><b><%= details.Name %></b></h3>
+      <h5><%= details.CourseCode %></h5>
+    </div>
+
+    <div class="w3-container">
+      <div class="w3-row">
+        <div class="w3-col m8 s12">
+          <p><button onclick="move('/student/course/<%= crs._id %>')" class="w3-button w3-padding-large w3-white w3-border"><b>READ MORE »</b></button></p>
         </div>
-    </header>
-    <section>
-        <% if (myCourse.length>0) { %>
-            <% myCourse.forEach(crs => { %>
-                <% var details= allcrs.find(i=>i._id==crs.crsID) %> 
-                <div onclick="move('/student/course/<%= crs._id %>')">
-                  <h3 ><%= details.Name %></h3> 
-                  <p><%= details.CourseCode %></p> 
-                  <br>
-                  <p ><%= crs.Verified %></p>
-                </div>
-            <% }) %>
-        <% } else { %>
-         <center><h1>No Courses yet</h1></center>
-        <% } %>
-        
-    </section>
+        <div class="w3-col m4 w3-hide-small">
+          <p><span class="w3-padding-large w3-right"><b>Verified  </b> <span class="w3-tag"><%= crs.Verified %></span></span></p>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <hr>
+  <% }) %>
+
+<% } else { %>
+    <center><h1>No Courses yet</h1></center>
+<% } %>
+<!-- END BLOG ENTRIES -->
+</div>
+
+<!-- Introduction menu -->
+
+
+<!-- END GRID -->
+</div><br>
+
+<!-- END w3-content -->
+</div>
+
+
 </body>
 <script>
     function move(a) {
@@ -40,3 +82,5 @@
     }
 </script>
 </html>
+
+
