--- a/views/student/auth/register.ejs
+++ b/views/student/auth/register.ejs
@@ -4,26 +4,138 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--===============================================================================================-->	
+	<link rel="icon" type="image/png" href="/images/icons/favicon.ico"/>
+    <!--===============================================================================================-->
+        <link rel="stylesheet" type="text/css" href="/vendor/bootstrap/css/bootstrap.min.css">
+    <!--===============================================================================================-->
+        <link rel="stylesheet" type="text/css" href="/fonts/font-awesome-4.7.0/css/font-awesome.min.css">
+    <!--===============================================================================================-->
+        <link rel="stylesheet" type="text/css" href="/vendor/animate/animate.css">
+    <!--===============================================================================================-->	
+        <link rel="stylesheet" type="text/css" href="/vendor/css-hamburgers/hamburgers.min.css">
+    <!--===============================================================================================-->
+        <link rel="stylesheet" type="text/css" href="/vendor/animsition/css/animsition.min.css">
+    <!--===============================================================================================-->
+        <link rel="stylesheet" type="text/css" href="/vendor/select2/select2.min.css">
+    <!--===============================================================================================-->	
+        <link rel="stylesheet" type="text/css" href="/vendor/daterangepicker/daterangepicker.css">
+    <!--===============================================================================================-->
+        <link rel="stylesheet" type="text/css" href="/css/util.css">
+        <link rel="stylesheet" type="text/css" href="/css/main.css">
+    <!--===============================================================================================-->
     <title>Register</title>
 </head>
 <body>
+
     <p><%= msg %> </p>
-    <form action="/register" method="post" enctype="multipart/form-data">
-        <input type="email" name="Email" placeholder="Email" id="">
-        <br><br>
-        <input type="password" name="Pass" placeholder="Password" id="">
-        <br><br>
-        <hr>
-        <input type="text" name="FName" placeholder="First Name" id="">
-        <br><br>
-        <input type="text" name="LName" placeholder="Last Name" id="">
-        <br><br>
-        <input type="tel" name="PhoneNo" placeholder="Phone No" id="">
-        <br><br>
-        <input type="file" name="image" accept="image/*" id="">
-        <br><br>
-        <button type="submit">Register</button>
-        <a href="/login">Login</a>
-    </form>
+
+    <div class="limiter">
+		<div class="container-login100">
+			<div class="wrap-login100">
+
+                <form action="/register" method="post" enctype="multipart/form-data" class="login100-form validate-form p-l-55 p-r-55 p-t-178">
+                    <input type="email" name="Email" placeholder="Email" id="">
+                    <br><br>
+                    <input type="password" name="Pass" placeholder="Password" id="">
+                    <br><br>
+                    <hr>
+                    <input type="text" name="FName" placeholder="First Name" id="">
+                    <br><br>
+                    <input type="text" name="LName" placeholder="Last Name" id="">
+                    <br><br>
+                    <input type="tel" name="PhoneNo" placeholder="Phone No" id="">
+                    <br><br>
+                    <input type="file" name="image" accept="image/*" id="">
+                    <br><br>
+                    <button type="submit">Register</button>
+                    <a href="/login">Login</a>
+                </form>
+            
+            
+				<!-- <form class="login100-form validate-form p-l-55 p-r-55 p-t-178">
+					<span class="login100-form-title">
+						Sign In
+					</span>
+
+					<div class="wrap-input100 validate-input m-b-16" data-validate="Please enter username">
+						<input class="input100" type="text" name="username" placeholder="Username">
+						<span class="focus-input100"></span>
+					</div>
+
+					<div class="wrap-input100 validate-input" data-validate = "Please enter password">
+						<input class="input100" type="password" name="pass" placeholder="Password">
+						<span class="focus-input100"></span>
+					</div>
+
+					<div class="text-right p-t-13 p-b-23">
+						<span class="txt1">
+							Forgot
+						</span>
+
+						<a href="/#" class="txt2">
+							Username / Password?
+						</a>
+					</div>
+
+					<div class="container-login100-form-btn">
+						<button class="login100-form-btn">
+							Sign in
+						</button>
+					</div>
+
+					<div class="flex-col-c p-t-170 p-b-40">
+						<span class="txt1 p-b-9">
+							Don’t have an account?
+						</span>
+
+						<a href="/#" class="txt3">
+							Sign up now
+						</a>
+					</div>
+				</form> -->
+			</div>
+		</div>
+	</div>
+
+
+
+
+
+
+
+
+
+
+
+   
+   
+
+
+
+
+
+
+
+
+
+
+
+    <!--===============================================================================================-->
+	<script src="/vendor/jquery/jquery-3.2.1.min.js"></script>
+    <!--===============================================================================================-->
+        <script src="/vendor/animsition/js/animsition.min.js"></script>
+    <!--===============================================================================================-->
+        <script src="/vendor/bootstrap/js/popper.js"></script>
+        <script src="/vendor/bootstrap/js/bootstrap.min.js"></script>
+    <!--===============================================================================================-->
+        <script src="/vendor/select2/select2.min.js"></script>
+    <!--===============================================================================================-->
+        <script src="/vendor/daterangepicker/moment.min.js"></script>
+        <script src="/vendor/daterangepicker/daterangepicker.js"></script>
+    <!--===============================================================================================-->
+        <script src="/vendor/countdowntime/countdowntime.js"></script>
+    <!--===============================================================================================-->
+        <script src="/js/main.js"></script>
 </body>
 </html>
