--- a/views/student/auth/register.ejs
+++ b/views/student/auth/register.ejs
@@ -35,6 +35,15 @@
 			<div class="wrap-login100">
 
                 <form action="/register" method="post" enctype="multipart/form-data" class="login100-form validate-form p-l-55 p-r-55 p-t-178">
+
+                    <span class="login100-form-title">
+						Register
+					</span>
+
+                    <div class="wrap-input100 validate-input m-b-16" data-validate="Please enter username">
+						<input class="input100" type="text" name="username" placeholder="Username">
+						<span class="focus-input100"></span>
+					</div>
                     <input type="email" name="Email" placeholder="Email" id="">
                     <br><br>
                     <input type="password" name="Pass" placeholder="Password" id="">
