--- a/views/school/courses/viewCourse.ejs
+++ b/views/school/courses/viewCourse.ejs
@@ -14,7 +14,7 @@
     <form action="/addNote">
         <input type="submit" value="Add Notes">
     </form>
-    <form action="">
+    <form action="/addVideo">
         <input type="submit" value="Add Videos">
     </form>
 
@@ -43,6 +43,40 @@
         <% } else { %>
             <p>There are no Registered Students for this Course</p>
         <% } %>
+
+        <h1>Notes</h1>
+        <div>
+            <% if (notes.length > 0) { %>
+                <% notes.forEach(note => { %>
+                    <% if (note.crsID != course._id) { %>
+                        <p>There are no Notes for This Course</p>
+                    <% } else { %>
+                        <a href="<%= note.Note %>">View Note</a>
+                        <p><%= note.Name %></p>
+                    <% } %>
+                <% }) %>
+            <% } else { %>
+                <p>There is no Note</p>
+            <% } %>
+        </div>
+        
+        <h1>Videos</h1>
+        <div>
+            <% if (videos.length > 0) { %>
+                <% videos.forEach(video => { %>
+                    <% if (video.crsID != course._id) { %>
+                        <p>There are no Notes for This Course</p>
+                    <% } else { %>
+                        <video width="300px" height="100%" controls id="video">
+                            <source src="<%= video.Video %>" type="video/mp4" style="width: 100%; height: 100%; object-fit: cover;">
+                        </video>
+                        <p><%= video.Name %></p>
+                    <% } %>
+                <% }) %>
+            <% } else { %>
+                <p>There is no Video</p>
+            <% } %>
+        </div>
     </div>
 </body>
 </html>
