--- a/views/school/courses/videos/addVideo.ejs
+++ b/views/school/courses/videos/addVideo.ejs
@@ -10,7 +10,7 @@
     <h1>Add New Video</h1>
     <p style="color: red;"><%= msg %></p>
 
-    <form action="/addVideo" method="post" enctype="multipart/form-data">
+    <form action="/addVideo" method="POST" enctype="multipart/form-data">
         <label for="crsID">Course: </label>
         <% if (courses.length > 0) { %>
             <select name="crsID" id="crsID">
