--- a/views/school/courses/viewCourse.ejs
+++ b/views/school/courses/viewCourse.ejs
@@ -48,9 +48,9 @@
         <div>
             <% if (notes.length > 0) { %>
                 <% notes.forEach(note => { %>
-                    <% if (note.crsID != course._id) { %>
+                    <% if (note.crsID == 0) { %>
                         <p>There are no Notes for This Course</p>
-                    <% } else { %>
+                    <% } else if (note.crsID == course._id){ %>
                         <a href="<%= note.Note %>">View Note</a>
                         <p><%= note.Name %></p>
                     <% } %>
