--- a/views/school/courses/viewCourse.ejs
+++ b/views/school/courses/viewCourse.ejs
@@ -5,6 +5,108 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title><%= course.Name %></title>
+    <style>
+        #bookTitle{
+  margin-left: 45%;
+  font-size: 35px;
+  margin-top: 70px;
+  margin-bottom: 10px;
+}
+
+#bookDes{
+  display: inline-block;
+}
+
+.bookDiv{
+  display: flex;
+  height: 350px;
+  width: auto;
+  /* background-color: blue; */
+  margin: 4px, 4px;
+  padding: 4px;
+  /* background-color: #08c708; */
+  overflow-x: auto;
+  overflow-y: hidden;
+  white-space: nowrap;
+  /* width: 1000px; */
+}
+
+.book{
+  width: 300px;
+  height: auto;
+  /* background-color: #2196F3; */
+  margin-bottom: 10px;
+  margin-left: 10px;
+  margin-right: 10px;
+  border-radius: 10px;
+  /* box-shadow: 0 0 25px 0 rgb(227, 227, 227), 0 20px 25px 0 rgba(0, 0, 0, 0.2); */
+}
+
+/* .book:hover {
+  box-shadow: 10px 10px 10px black;
+} */
+
+/*  */
+
+.card-body:hover img{
+  filter: blur(2px) brightness(60%);
+  box-shadow: 0 0 16px rgb(105, 108, 108);
+}
+
+.card-body :not(img){
+  position: absolute;
+  /* z-index: -1; */
+  top: 30%;
+  width: 100%;
+  text-align: center;
+  color: #fff;
+  opacity: 0;
+  transition: .3s;
+}
+
+.card-body h5{
+  top: 50%;
+  right: 50%;
+}
+
+.card-body:hover :not(img){
+  opacity: 1;
+}
+
+/*  */
+
+#videoTitle{
+  margin-left: 45%;
+  font-size: 35px;
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
+.videoDiv{
+  display: flex;
+  height: 350px;
+  width: auto;
+  /* background-color: blue; */
+  margin: 4px, 4px;
+  padding: 4px;
+  /* background-color: #08c708; */
+  overflow-x: auto;
+  overflow-y: hidden;
+  white-space: nowrap;
+  /* width: 1000px; */
+}
+
+.video{
+  width: 300px;
+  height: auto;
+  /* background-color: #2196F3; */
+  margin-bottom: 10px;
+  margin-left: 10px;
+  margin-right: 10px;
+  border-radius: 10px;
+  box-shadow: 0 0 25px 0 rgb(227, 227, 227), 0 20px 25px 0 rgba(0, 0, 0, 0.2);
+}
+    </style>
 </head>
 <body>
     <h1>Course Name: <i><%= course.Name %></i></h1>
@@ -46,35 +148,50 @@
             <p>There are no Registered Students for this Course</p>
         <% } %>
 
-        <h1>Notes</h1>
-        <div>
+        <h1 id="bookTitle">Notes</h1>
+        <div class="bookDiv">
             <% if (notes.length > 0) { %>
                 <% notes.forEach(note => { %>
-                    <% if (note.crsID == 0) { %>
-                        <p>There are no Notes for This Course</p>
-                    <% } else if (note.crsID == course._id){ %>
-                        <img src="<%= note.Cover %>" alt="No Cover" width="300px" height="100%">
-                        <a href="<%= note.Note %>">View Note</a>
-                        <p><%= note.Name %></p>
-                    <% } %>
+                    <div class="book">
+                        <% if (note.crsID == 0) { %>
+                            <p>There are no Notes for This Course</p>
+                        <% } else if (note.crsID == course._id){ %>
+                            <h4 style="padding-top: 10px;"><%= note.Name %></h4>
+                            <div  style="width: 100%; height: 70%; border-top-left-radius: 10%; border-top-right-radius: 10%; display: inline-block; position: relative; transition: .3s;" class="card-body" id="blur-in">
+                                <img src="<%= note.Cover %>" alt="<%= note.Name %>" width="300px" height="100%">
+                                <h5><a href="<%= note.Note %>" blank="false">ViewNote</a></h5>
+                            </div>
+                            <!-- <img src="<%= note.Cover %>" alt="No Cover" width="300px" height="100%">
+                            <a href="<%= note.Note %>">View Note</a> -->
+                            <!-- <p><%= note.Name %></p> -->
+                        <% } %>
+                    </div>
                 <% }) %>
             <% } else { %>
                 <p>There is no Note</p>
             <% } %>
         </div>
         
-        <h1>Videos</h1>
-        <div>
+        <h1 id="videoTitle">Videos</h1>
+        <div class="videoDiv">
             <% if (videos.length > 0) { %>
                 <% videos.forEach(video => { %>
-                    <% if (video.crsID == 0) { %>
-                        <p>There are no Videos for This Course</p>
-                    <% } else if (video.crsID == course._id) { %>
-                        <video width="300px" height="300px" controls id="video">
-                            <source src="<%= video.Video %>" type="video/mp4" style="width: 100%; height: 100%; object-fit: cover;">
-                        </video>
-                        <p><%= video.Name %></p>
-                    <% } %>
+                    <div class="video">
+                        <% if (video.crsID == 0) { %>
+                            <p>There are no Videos for This Course</p>
+                        <% } else if (video.crsID == course._id) { %>
+                            <h4 style="padding-top: 10px;"><%= video.Name %></h4>
+                            <div style="width: 100%; height: 70%; border-top-left-radius: 10%; border-top-right-radius: 10%;">
+                                <video width="300px" height="100%" controls id="video">
+                                    <source src="<%= video.Video %>" type="video/mp4" style="width: 100%; height: 100%; object-fit: cover;">
+                                </video>
+                            </div>
+                            <!-- <video width="300px" height="300px" controls id="video">
+                                <source src="<%= video.Video %>" type="video/mp4" style="width: 100%; height: 100%; object-fit: cover;">
+                            </video>
+                            <p><%= video.Name %></p> -->
+                        <% } %>
+                    </div>
                 <% }) %>
             <% } else { %>
                 <p>There is no Video</p>
