--- a/views/school/courses/viewCourse.ejs
+++ b/views/school/courses/viewCourse.ejs
@@ -109,6 +109,7 @@
     </style>
 </head>
 <body>
+    <button onclick="history.back()">Go Back</button>
     <h1>Course Name: <i><%= course.Name %></i></h1>
     <h2>Course Code: <i><%= course.CourseCode %></i></h2>
     <h4>Course Price: <i><%= course.Price %></i></h4>
