--- a/views/school/students/student.ejs
+++ b/views/school/students/student.ejs
@@ -7,6 +7,7 @@
     <title>Home</title>
 </head>
 <body>
+    <button onclick="history.back()">Go Back</button>
     <header>
         <h2>Lincoln</h2>
         <div>
