--- a/views/school/courses/createCourse.ejs
+++ b/views/school/courses/createCourse.ejs
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
+    <button onclick="history.back()">Go Back</button>
     <h1>Add New Courses</h1>
     <form action="/createCourse" method="POST">
         <label for="courseName">Course Name:</label>
