--- a/views/school/courses/editCourse.ejs
+++ b/views/school/courses/editCourse.ejs
@@ -7,6 +7,7 @@
     <title>Edit Course</title>
 </head>
 <body>
+    <button onclick="history.back()">Go Back</button>
     <h1>Edit This Course</h1>
 
     <form action="/editCourse/<%= course._id %>" method="POST">
