--- a/views/school/courses/notes/addNote.ejs
+++ b/views/school/courses/notes/addNote.ejs
@@ -57,6 +57,7 @@
     </style>
 </head>
 <body>
+  <button onclick="history.back()">Go Back</button>
     <h1>Add New Note</h1>
     <p style="color: red;"><%= msg %></p>
 
