--- a/views/school/courses/videos/addVideo.ejs
+++ b/views/school/courses/videos/addVideo.ejs
@@ -7,6 +7,7 @@
     <title>Add Video</title>
 </head>
 <body>
+    <button onclick="history.back()">Go Back</button>
     <h1>Add New Video</h1>
     <p style="color: red;"><%= msg %></p>
 
