--- a/views/school/dashboard.ejs
+++ b/views/school/dashboard.ejs
@@ -7,6 +7,7 @@
     <title>Admin Dashboard</title>
 </head>
 <body>
+    <button onclick="history.back()">Go Back</button>
     <h1>Dashboard</h1>
 
     <form action="/createCourse">
