--- a/views/school/courses/viewCourse.ejs
+++ b/views/school/courses/viewCourse.ejs
@@ -162,9 +162,7 @@
                                 <img src="<%= note.Cover %>" alt="<%= note.Name %>" width="300px" height="100%">
                                 <h5><a href="<%= note.Note %>" blank="false">ViewNote</a></h5>
                             </div>
-                            <!-- <img src="<%= note.Cover %>" alt="No Cover" width="300px" height="100%">
-                            <a href="<%= note.Note %>">View Note</a> -->
-                            <!-- <p><%= note.Name %></p> -->
+                            <a href="/deleteNote/<%= note._id %>">Delete</a>
                         <% } %>
                     </div>
                 <% }) %>
@@ -187,10 +185,7 @@
                                     <source src="<%= video.Video %>" type="video/mp4" style="width: 100%; height: 100%; object-fit: cover;">
                                 </video>
                             </div>
-                            <!-- <video width="300px" height="300px" controls id="video">
-                                <source src="<%= video.Video %>" type="video/mp4" style="width: 100%; height: 100%; object-fit: cover;">
-                            </video>
-                            <p><%= video.Name %></p> -->
+                            <a href="/deleteVideo/<%= video._id %>">Delete</a>
                         <% } %>
                     </div>
                 <% }) %>
