--- a/views/school/login.ejs
+++ b/views/school/login.ejs
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login as Admin</title>
-    <link rel="stylesheet" href="styles/style.css">
+    <!-- <link rel="stylesheet" href="styles/style.css"> -->
 </head>
-<body class="bg-black">
+<body>
     <p style="color: red;"><%= emailMsg %></p>
     <p style="color: red;"><%= passwordMsg %></p>
     <p style="color: red;"><%= msg %></p>
