--- a/views/student/course/home.ejs
+++ b/views/student/course/home.ejs
@@ -42,7 +42,7 @@
                 <% allnotes.forEach(vid => { %>
                  <article>
                     <p><%= vid.Name  %> </p>
-                    <a href="<%= vid.Note %> ">Download</a>
+                    <a href="<%= vid.Note %>" target="_blank">Download</a>
                 </article>
                 <% }) %>
             <% } else { %>
