--- a/views/student/auth/register.ejs
+++ b/views/student/auth/register.ejs
@@ -21,8 +21,9 @@
     <!--===============================================================================================-->	
         <link rel="stylesheet" type="text/css" href="/vendor/daterangepicker/daterangepicker.css">
     <!--===============================================================================================-->
+        <script src="https://cdn.tailwindcss.com"></script>
         <link href="/dist/output.css" rel="stylesheet">
-        <link rel="stylesheet" type="text/css" href="/public/css/util.css">
+        <link rel="stylesheet" type="text/css" href="/css/util.css">
         <link rel="stylesheet" type="text/css" href="/css/main.css">
         <link rel="stylesheet" type="text/css" href="/public/css/tailwind.css">
 
@@ -30,7 +31,6 @@
     <title>Register</title>
 </head>
 <body>
-
     <div class="limiter">
 		<div class="container-login100">
 			<div class="wrap-login100">
@@ -53,6 +53,7 @@
 					</div>
                     <br><br>
                     <hr>
+                    <br>
                     <div class="wrap-input100 validate-input" data-validate = "Please enter first name">
 						<input class="input100" type="text" name="FName" placeholder="First Name" id="">
 						<span class="focus-input100"></span>
@@ -68,82 +69,34 @@
 						<span class="focus-input100"></span>
 					</div>
                     <br><br>
-                    <div class="wrap-input100 validate-input" data-validate = "Please enter phone number">
-						<input class="input100" type="file" name="image" id="" accept="image/*">
+                    <div class="" data-validate = "Please enter phone number">
+						<input class="" type="file" name="image" id="" accept="image/*">
 						<span class="focus-input100"></span>
 					</div>
                     <br><br>
-                    <button type="submit">Register</button>
-                    <a href="/login">Login</a>
-                </form>
-            
-            
-				<!-- <form class="login100-form validate-form p-l-55 p-r-55 p-t-178">
-					<span class="login100-form-title">
-						Sign In
-					</span>
-
-					<div class="wrap-input100 validate-input m-b-16" data-validate="Please enter username">
-						<input class="input100" type="text" name="username" placeholder="Username">
-						<span class="focus-input100"></span>
-					</div>
-
-					<div class="wrap-input100 validate-input" data-validate = "Please enter password">
-						<input class="input100" type="password" name="pass" placeholder="Password">
-						<span class="focus-input100"></span>
-					</div>
-
-					<div class="text-right p-t-13 p-b-23">
-						<span class="txt1">
-							Forgot
-						</span>
-
-						<a href="/#" class="txt2">
-							Username / Password?
-						</a>
-					</div>
-
-					<div class="container-login100-form-btn">
+                    <div class="container-login100-form-btn">
 						<button class="login100-form-btn">
-							Sign in
+							Register
 						</button>
 					</div>
-
-					<div class="flex-col-c p-t-170 p-b-40">
+                    <div class="flex-col-c p-t-170 p-b-40">
 						<span class="txt1 p-b-9">
-							Don’t have an account?
+						Already have an account?
 						</span>
 
-						<a href="/#" class="txt3">
-							Sign up now
+                        <a href="/login" class="txt3">
+							Login
 						</a>
 					</div>
-				</form> -->
+                </form>
+            
+           
 			</div>
 		</div>
 	</div>
 
 
-
-
-
-
-
-
-
-
-
    
-   
-
-
-
-
-
-
-
-
-
 
 
     <!--===============================================================================================-->
