--- a/views/student/home.ejs
+++ b/views/student/home.ejs
@@ -5,28 +5,40 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Karma">
 <style>
-body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
+body,h1,h2,h3,h4,h5,h6 {font-family: "Karma", sans-serif}
+.w3-bar-block .w3-bar-item {padding:20px}
 </style>
 </head>
-<body class="w3-light-grey">
+<body>
+
+<!-- Sidebar (hidden by default) -->
+<nav class="w3-sidebar w3-bar-block w3-card w3-top w3-xlarge w3-animate-left" style="display:none;z-index:2;width:40%;min-width:300px" id="mySidebar">
+  <a href="javascript:void(0)" onclick="w3_close()"
+  class="w3-bar-item w3-button">Close Menu</a>
+  <a href="/student/edit" onclick="w3_close()" class="w3-bar-item w3-button">Edit Profile</a>
+  <a href="/regcourse" onclick="w3_close()" class="w3-bar-item w3-button">Add Course</a>
+  <a href="/logout" onclick="w3_close()" class="w3-bar-item w3-button">Logout</a>
+
+</nav>
+
+<!-- Top menu -->
+<div class="w3-top">
+  <div class="w3-white w3-xlarge" style="max-width:1200px;margin:auto">
+    <div class=" w3-padding-16 w3-left" onclick="w3_open()">
+      <img  src="<%= user.imgUrl %>" alt="<%= user.Fname %>" width="90px" height="90px" style="border-radius: 100px; cursor: pointer;"></div>
+    <div class="w3-right w3-padding-16"> <a href="/logout">Logout</a></div>
+    <div class="w3-center w3-padding-16"><h3><b><%= user.Fname %> <%= user.Lname %></b></h3>
+    <br>
+  </div>
+  </div>
+</div>
+
 
 <!-- w3-content defines a container for fixed size centered content, 
 and is wrapped around the whole page content, except for the footer in this example -->
 <div class="w3-content" style="max-width:1400px">
-
-<!-- Header -->
-<header class="w3-container w3-center w3-padding-32">
-    <img src="<%= user.imgUrl %>" alt="<%= user.Fname %>" width="150px" height="150px" style="border-radius: 100px">
-
-  <h1><b>Lincoln Online</b></h1>
-  <h3><b><%= user.Fname %> <%= user.Lname %></b></h3>
-
-  <p><a href="/student/edit">edit Profile</a> ||
-    <a href="/regcourse">addcourse</a> ||
-    <a href="/logout">Logout</a></p>
-</header>
 
 <!-- Grid -->
 <div class="w3-row">
@@ -35,7 +47,7 @@ and is wrapped around the whole page content, except for the footer in this exam
             <% var details= allcrs.find(i=>i._id==crs.crsID) %> 
 
 <!-- Blog entries -->
-<div class="w3-col s12">
+<div class="w3-col s12" style="padding:150px">
   <!-- Blog entry -->
   <div class="w3-card-4 w3-margin w3-white">
     <img src="/crsimg.jpg" alt="Nature" style="width:100%;object-fit:cover; height: 100px;">
@@ -50,7 +62,7 @@ and is wrapped around the whole page content, except for the footer in this exam
           <p><button onclick="move('/student/course/<%= crs._id %>')" class="w3-button w3-padding-large w3-white w3-border"><b>READ MORE »</b></button></p>
         </div>
         <div class="w3-col m4 w3-hide-small">
-          <p><span class="w3-padding-large w3-right"><b>Verified  </b> <span class="w3-tag"><%= crs.Verified %></span></span></p>
+          <p><span class="w3-padding-large w3-right"><b>Verified  </b> <span class="w3-tag" style="background-color: red;"><%= crs.Verified %></span></span></p>
         </div>
       </div>
     </div>
@@ -73,14 +85,25 @@ and is wrapped around the whole page content, except for the footer in this exam
 
 <!-- END w3-content -->
 </div>
-
-
 </body>
 <script>
     function move(a) {
         window.location=a
     }
 </script>
+
+
+<script>
+  // Script to open and close sidebar
+  function w3_open() {
+    document.getElementById("mySidebar").style.display = "block";
+  }
+   
+  function w3_close() {
+    document.getElementById("mySidebar").style.display = "none";
+  }
+  </script>
 </html>
+
 
 
