--- a/views/school/courses/notes/addNote.ejs
+++ b/views/school/courses/notes/addNote.ejs
@@ -58,6 +58,9 @@
 </head>
 <body>
   <button onclick="history.back()">Go Back</button>
+  <form action="/admin/dashboard">
+    <input type="submit" value="Dashboard">
+</form>
     <h1>Add New Note</h1>
     <p style="color: red;"><%= msg %></p>
 
