--- a/views/school/courses/createCourse.ejs
+++ b/views/school/courses/createCourse.ejs
@@ -8,6 +8,9 @@
 </head>
 <body>
     <button onclick="history.back()">Go Back</button>
+    <form action="/admin/dashboard">
+        <input type="submit" value="Dashboard">
+    </form>
     <h1>Add New Courses</h1>
     <form action="/createCourse" method="POST">
         <label for="courseName">Course Name:</label>
