--- a/views/school/courses/editCourse.ejs
+++ b/views/school/courses/editCourse.ejs
@@ -8,6 +8,9 @@
 </head>
 <body>
     <button onclick="history.back()">Go Back</button>
+    <form action="/admin/dashboard">
+        <input type="submit" value="Dashboard">
+    </form>
     <h1>Edit This Course</h1>
 
     <form action="/editCourse/<%= course._id %>" method="POST">
