--- a/views/school/courses/videos/addVideo.ejs
+++ b/views/school/courses/videos/addVideo.ejs
@@ -8,6 +8,9 @@
 </head>
 <body>
     <button onclick="history.back()">Go Back</button>
+    <form action="/admin/dashboard">
+        <input type="submit" value="Dashboard">
+    </form>
     <h1>Add New Video</h1>
     <p style="color: red;"><%= msg %></p>
 
