--- a/views/school/courses/viewCourse.ejs
+++ b/views/school/courses/viewCourse.ejs
@@ -110,6 +110,12 @@
 </head>
 <body>
     <button onclick="history.back()">Go Back</button>
+    <form action="/admin/dashboard">
+        <input type="submit" value="Dashboard">
+    </form>
+    <form action="/admin/dashboard">
+        <input type="submit" value="Dashboard">
+    </form>
     <h1>Course Name: <i><%= course.Name %></i></h1>
     <h2>Course Code: <i><%= course.CourseCode %></i></h2>
     <h4>Course Price: <i><%= course.Price %></i></h4>
