--- a/views/school/students/student.ejs
+++ b/views/school/students/student.ejs
@@ -8,6 +8,9 @@
 </head>
 <body>
     <button onclick="history.back()">Go Back</button>
+    <form action="/admin/dashboard">
+        <input type="submit" value="Dashboard">
+    </form>
     <header>
         <h2>Lincoln</h2>
         <div>
