--- a/views/school/courses/notes/addNote.ejs
+++ b/views/school/courses/notes/addNote.ejs
@@ -81,10 +81,10 @@
         <% } %>
         <br>
         <label for="Name">Note Title: </label>
-        <input type="text" name="Name" id="Name">
+        <input type="text" name="Name" id="Name" required>
         <br>
         <label for="Note">Note File: </label>
-        <input type="file" name="Note" id="Note">
+        <input type="file" name="Note" id="Note" required>
         <br>
         <input type="submit" value="Add Note">
     </form>
