--- a/views/school/courses/videos/addVideo.ejs
+++ b/views/school/courses/videos/addVideo.ejs
@@ -29,10 +29,10 @@
         <% } %>
         <br>
         <label for="Name">Video Title: </label>
-        <input type="text" name="Name" id="Name">
+        <input type="text" name="Name" id="Name" required>
         <br>
         <label for="Video">Video File: </label>
-        <input type="file" name="Video" id="Video">
+        <input type="file" name="Video" id="Video" required>
         <br>
         <input type="submit" value="Add Video">
     </form>
