--- a/views/school/login.ejs
+++ b/views/school/login.ejs
@@ -14,10 +14,10 @@
     <h1>Login As Admin</h1>
     <form action="/adminLogin" method="POST">
         <label for="email">Email</label>
-        <input type="email" name="email" id="email" placeholder="Enter your Email">
+        <input type="email" name="email" id="email" placeholder="Enter your Email" required>
         <br>
         <label for="password">Password</label>
-        <input type="password" name="password" id="password" placeholder="Enter your password">
+        <input type="password" name="password" id="password" placeholder="Enter your password" required>
         <br>
         <input type="submit" value="submit">
     </form>
